# Cafe-Assistant

./: .env.example  README.md  RUNBOOK.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: Containerfile  docker-compose.prod.yml  promote.sh  release.sh  rollback.sh  shadow_traffic.py
deploy/k8s/: api.yaml  configmap.yaml  namespace.yaml  postgres-redis.yaml  secret.example.yaml  worker.yaml
evals/: __init__.py  allergen_safety.py  common.py  run_evals.py
evals/datasets/: agent_eval_cases.json  allergen_cases.json  btb_agent_eval_cases.json
migrations/: env.py
migrations/versions/: 20260616_0001_initial_schema.py  20260617_0002_menu_item_embeddings.py  20260618_0003_identity_memory.py  20260618_0004_security_audit.py  20260618_0005_identity_consent_hardening.py  20260619_0005_production_catalog.py  20260619_0006_sentence_transformer_embeddings.py  20260622_0007_merge_identity_catalog_heads.py  20260624_0008_account_login.py  20260624_0009_remove_phone_identity_storage.py
scripts/: cleanup_retention.py  embed_catalog.py  embed_menu.py  import_btb_documents.py  incident_replay.py  seed_menu.py
src/cafe_assistant/: __init__.py  config.py  main.py  versioning.py
static/: chat.html
tests/chaos/: test_safe_degradation.py
tests/fixtures/: __init__.py  legacy_embeddings.py  legacy_menu.py
tests/integration/: test_btb_catalog_import.py  test_catalog_retrieval.py  test_chat_flow.py  test_identity_memory.py  test_retrieval.py  test_security.py  test_versioning_trace.py
tests/load/: k6_chat.js  test_chat_latency.py
(+64 files in other folders)
