[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cafe-assistant"
version = "0.1.0"
description = "Backend foundations for a cafe menu assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.8",
    "SQLAlchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cafe_assistant"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "load: load and latency budget tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
